<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hengt Mann</string>

    <string name="action_settings">Avslutt</string>
    <string name="play_button">Spill</string>
    <string name="info_button">Info</string>

    <string name="gallows">Info</string>
    <string name="head">Info</string>
    <string name="body">Info</string>
    <string name="left_arm">Info</string>
    <string name="right_arm">Info</string>
    <string name="left_leg">Info</string>
    <string name="right_leg">Info</string>

    <string name="main_image_description">Bakgrunnsbilde hovedskjerm</string>

    <string name="info_text">Hengt mann er et spill hvor du skal gjette på
        rett ord på seks forsøk eller bli hengt.</string>
</resources>
