<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:background="#FF000000"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:paddingTop="15dp">


        <TextView
            android:id="@+id/numCorr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/gallows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gallows"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/hangman_0"/>

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/head"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/hangman_1"/>

        <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/hangman_2"/>

        <ImageView
            android:id="@+id/left_arm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/left_arm"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/hangman_3"/>

        <ImageView
            android:id="@+id/right_arm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/right_arm"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/hangman_4"/>

        <ImageView
            android:id="@+id/left_leg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/left_leg"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/hangman_5"/>

        <ImageView
            android:id="@+id/right_leg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/right_leg"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/hangman_6"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/word"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">
    </LinearLayout>

    <GridView
        android:id="@+id/letters"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="#FF000000"
        android:horizontalSpacing="5dp"
        android:numColumns="13"
        android:padding="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"/>
</LinearLayout>